--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   shadow-intensity="1" 
   camera-controls 
   touch-action="pan-y"
-  loading="eager"
-  poster="poster.webp">
+  loading="eager">
   <div slot="error" style="background-color: white; color: red; padding: 20px;">
     ¡Error al cargar el modelo 3D!
   </div>
