--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Use it like any other HTML element -->
 <model-viewer 
   alt="Igualada Cemetery Chapel" 
-  src="igualada_cemetery_chapel_draco_max.glb" 
+  src="igualada_cemetery_chapel.bin" 
   ar 
   shadow-intensity="1" 
   camera-controls 
