--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <!-- Use it like any other HTML element -->
 <model-viewer 
   alt="Igualada Cemetery Chapel" 
-  src="igualada_cemetery_chapel.bin" 
+  src="igualada_cemetery_chapel.data" 
+  type="model/gltf-binary"
   ar 
   shadow-intensity="1" 
   camera-controls 
@@ -14,6 +15,7 @@
     ¡Error al cargar el modelo 3D!
   </div>
 </model-viewer>
+
 
 <style>
   model-viewer {
