--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <!-- Use it like any other HTML element -->
 <model-viewer 
   alt="Igualada Cemetery Chapel" 
-  src="igualada_cemetery_chapel.data" 
-  type="model/gltf-binary"
+  src="igualada_cemetery_chapel.bin" 
   ar 
   shadow-intensity="1" 
   camera-controls 
@@ -15,7 +14,6 @@
     ¡Error al cargar el modelo 3D!
   </div>
 </model-viewer>
-
 
 <style>
   model-viewer {
